# TC_XAR_Container_Sample

./: .gitignore  Makefile  README.md  docker-compose.faketime.yaml  docker-compose.licensed.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  tasks.py
.github/workflows/: test.yml
docs/: beckhoff-cloud-ci-proposal.md  trial-license-capture-plan.md
examples/: Dockerfile.app  README.md  docker-compose.yaml
scripts/: ads-decode.py  expose-mqtt-to-hyperv.ps1  mqtt-ads-capture.py  mqtt.vm-default-switch.xml  read-systemid.py
tc31-xar-base/: Dockerfile  Dockerfile.faketime  Dockerfile.licensed  entrypoint.sh
tc31-xar-base/TwinCAT/: SysStartupState.reg
tc31-xar-base/bundled/: TcSelfSigned.xml  TrialLicense.tclrs  cpuinfo.snapshot  machine-id
tc31-xar-base/bundled/Boot/: CurrentConfig.tszip  CurrentConfig.xml
tc31-xar-base/bundled/Boot/CurrentConfig/: Log4TC.tpzip  log4Tc_Tester.tpzip
tc31-xar-base/bundled/Boot/Plc/: Port_851.app  Port_851.cid  Port_851.crc  Port_851.occ  Port_851_boot.tizip  Port_852.app  Port_852.cid  Port_852.crc  Port_852.occ  Port_852_boot.tizip
tests/: conftest.py
tests/e2e/: _helpers.py  conftest.py  test_ads_handshake.py  test_ads_notifications.py  test_ads_over_mqtt.py  test_container_boot.py  test_plc_runtime.py
tests/fixtures/: StaticRoutes.test.xml
tests/unit/: test_compose_config.py  test_dockerfile.py  test_entrypoint.py  test_secrets.py  test_static_routes.py
